--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="levels.js"></script>
 <script src="train.js"></script>
+
+<!--<svg width="400" height="100" id="desk">-->
+    <!--<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />-->
+<!--</svg>-->
 </body>
 </html>
