Add sounds and interface

--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="train.css">
 </head>
 <body>
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+
+<header>Vlak</header>
+<div id="main">
+    <article>
+        <div id='train_desk'></div>
+
+    </article>
+
+    <nav>
+        <div class="data_box">
+            Skóre: 0
+        </div>
+    </nav>
+    <aside>Předchozí mapy:</aside>
+</div>
+<!--<footer>footer</footer>-->
+
 <script src="levels.js"></script>
 <script src="train.js"></script>
 
-<!--<svg width="400" height="100" id="desk">-->
-    <!--<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />-->
-<!--</svg>-->
 </body>
 </html>
