Add overall interface with button to other level
Display score

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
     <nav>
         <div class="data_box">
-            Skóre: 0
+            Skóre:
+            <div id="score"></div>
         </div>
     </nav>
-    <aside>Předchozí mapy:</aside>
+    <aside>Předchozí mapy:
+        <div id="maps_menu">
+        </div>
+    </aside>
 </div>
 <!--<footer>footer</footer>-->
 
