Added best scores

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     </article>
 
     <nav>
-        <div class="data_box">
+        <article class="data_box">
             Skóre:
-            <div id="score"></div>
-        </div>
+            <div id="score">0</div>
+        </article>
+        <article>
+            Nejlepší skóre:
+            <div id="best_score"></div>
+        </article>
     </nav>
     <aside>Předchozí mapy:
         <div id="maps_menu">
@@ -30,6 +34,7 @@
 
 <script src="levels.js"></script>
 <script src="train.js"></script>
+<script src="interface.js"></script>
 
 </body>
 </html>
