Added information about game status.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
     <aside>Předchozí mapy:
         <div id="maps_menu">
         </div>
+        <div class="info">
+            Pro ovládání můžete použít šipky, popřípadě klávesy wsad. <br>
+            Klávesou mezerník lze vyvolat pauzu.<br>
+            Klávesou R lze restartovat hru.<br>
+            Pokud sbíráte kostičky stejné barvy, roste odměna rychleji.
+        </div>
     </aside>
 </div>
-<!--<footer>footer</footer>-->
+<footer></footer>
 
 <script src="levels.js"></script>
 <script src="train.js"></script>
