--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>JS Bin</title>
+    <title>Train</title>
     <link rel="stylesheet" href="train.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
 <header>Vlak</header>
 <div id="main">
     <article>
+        <div id="level" class="white_text"></div>
         <div id='train_desk'></div>
 
     </article>
