Remove empty label.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <header>Vlak</header>
 <div id="main">
     <article>
-        <div id="level" class="white_text"></div>
-        <div id='train_desk'></div>
+        <div id="level" class="white_text">0</div>
+        <div id='train_desk'>0</div>
 
     </article>
 
