--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>Vlak</header>
 <div id="main">
     <article>
-        <div id="level" class="white_text">0</div>
+        <!--<div id="level" class="white_text">0</div>-->
         <div id='train_desk'>0</div>
 
     </article>
