--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <header>Vlak</header>
 <div id="main">
     <article>
-        <div id="level" class="white_text">0</div>
-        <div id="train_desk" class="white_text">0</div>
+        <article id="level" class="white_text">0</article>
+        <article id="train_desk" class="white_text">0</article>
 
     </article>
 
