--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 </body>
-<script src="levels.js"></script>
-<script src="train.js"></script>
-<script src="interface.js"></script>
+<!--<script src="levels.js"></script>-->
+<!--<script src="train.js"></script>-->
+<!--<script src="interface.js"></script>-->
 </html>
