--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="main">
     <article>
         <article id="level" class="white_text">0</article>
-        <article id="train_desk" class="white_text">0</article>
+        <article id="train_desk" class="white_text"></article>
 
     </article>
 
@@ -42,7 +42,7 @@
 
 
 </body>
-<!--<script src="levels.js"></script>-->
-<!--<script src="train.js"></script>-->
-<!--<script src="interface.js"></script>-->
+<script src="levels.js"></script>
+<script src="train.js"></script>
+<script src="interface.js"></script>
 </html>
