--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 
 </body>
+<script src="init.js"></script>
 <script src="levels.js"></script>
 <script src="train.js"></script>
 <script src="interface.js"></script>
