Add h2, h3 to article, move script to body

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <header>Vlak</header>
 <div id="main">
     <article>
-        <article id="level" class="white_text">0</article>
-        <article id="train_desk" > </article>
+        <article id="level" class="white_text"><h1>0</h1></article>
+        <div id="train_desk"></div>
 
     </article>
 
     <nav>
         <article class="data_box">
-            Skóre:
+            <h3>
+                Skóre:
+            </h3>
             <div id="score">0</div>
         </article>
         <article>
-            Nejlepší skóre:
+            <h3>
+                Nejlepší skóre:
+            </h3>
             <div id="best_score"></div>
         </article>
     </nav>
@@ -37,12 +41,12 @@
     </aside>
 </div>
 <footer></footer>
-
-
-
-</body>
 <script src="init.js"></script>
 <script src="levels.js"></script>
 <script src="train.js"></script>
 <script src="interface.js"></script>
+
+
+</body>
+
 </html>
