Use section and div, remove article

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 
 <header>Vlak</header>
 <div id="main">
-    <article>
+    <section>
         <article id="level" class="white_text"><h1>0</h1></article>
         <div id="train_desk"></div>
 
-    </article>
+    </section>
 
     <nav>
-        <article class="data_box">
-            <h3>
-                Skóre:
+        <div class="data_box">
+            <h3> Skóre:
             </h3>
             <div id="score">0</div>
-        </article>
-        <article>
+        </div>
+        <dib>
             <h3>
                 Nejlepší skóre:
             </h3>
             <div id="best_score"></div>
-        </article>
+        </dib>
     </nav>
     <aside>Předchozí mapy:
         <div id="maps_menu">
