Use div instead section

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <header>Vlak</header>
 <div id="main">
-    <section>
+    <div>
         <article id="level" class="white_text"><h1>0</h1></article>
         <div id="train_desk"></div>
 
-    </section>
+    </div>
 
     <nav>
         <div class="data_box">
@@ -22,12 +22,12 @@
             </h3>
             <div id="score">0</div>
         </div>
-        <dib>
+        <div>
             <h3>
                 Nejlepší skóre:
             </h3>
             <div id="best_score"></div>
-        </dib>
+        </div>
     </nav>
     <aside>Předchozí mapy:
         <div id="maps_menu">
