Add drag and drop and read file

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Train</title>
     <link rel="stylesheet" href="train.css">
 </head>
-<body>
+<body id="drop_zone">
 
 <header>Vlak</header>
-<div id="main">
+<div  id="main" >
     <div>
         <article id="level" class="white_text"><h1>0</h1></article>
         <div id="train_desk"></div>
