--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Train</title>
-    <link rel="stylesheet" href="train.css">
+    <link rel="stylesheet" href="css/train.css">
 </head>
 <body id="drop_zone">
 
@@ -40,10 +40,10 @@
     </aside>
 </div>
 <footer></footer>
-<script src="init.js"></script>
-<script src="levels.js"></script>
-<script src="train.js"></script>
-<script src="interface.js"></script>
+<script src="js/init.js"></script>
+<script src="js/levels.js"></script>
+<script src="js/train.js"></script>
+<script src="js/interface.js"></script>
 
 
 </body>
